--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Welcome to Git!</h1>
     <p>updating the index file</p>
     <p>Changes are to be made in the master branch.</p>
+    <p>updating for the second time</p>
 </body>
 </html>
