--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git Project</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome to Git!</h1>
     <p>updating the index file</p>
     <p>Changes are to be made in the master branch.</p>
     <p>updating for the second time</p>
-</body>
+    <p>third times the charm</p>
+  </body>
 </html>
